--- a/src/app/sports/sports.component.html
+++ b/src/app/sports/sports.component.html
@@ -1,7 +1,7 @@
 <h2>Sports</h2>
 <ul>
   <li *ngFor="let sport of sports" (click)="onSelect(sport)">
-    <a [routerLink]="sport.name">{{sport.name}}</a>
+    <a [routerLink]="[sport.name]">{{sport.name}}</a>
   </li>
 </ul>
 <!-- <sports-medals [sport]="selectedSport"></sports-medals> -->
